[package]
name = "cartouches"
version = "0.2.0"
authors = ["Asta Halkjær From <andro.from@gmail.com>"]
license = "MIT"
edition = "2024"
description = """
Parses Isabelle LaTeX output into manageable snippets.
"""
repository = "https://github.com/astahfrom/cartouches"

[[bin]]
name = "cartouches"
path = "src/main.rs"

[lib]
name = "cartouches"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
